<resources>
    <string name="app_name">hping2</string>
    <string name="settingsMenuTitle">Settings</string>
    <string name="helpMenuTitle">Help</string>
    <string name="aboutMenuTitle">About</string>
    <string name="scanMenuTitle">Scan</string>
    <string name="startButton">Start</string>
    <string name="IPAddress">IP Address/Website</string>
    <string name="DestPort">Dest Port</string>
    <string name="IncrementPort">Increment Dest Port by Reply</string>
    <string name="IncrementPortSent">Increment Dest Port by Sent</string>
    <string name="SourcePort">Source Port</string>
    <string name="Protocol">Protocol</string>
    <string name="TCP">TCP</string>
    <string name="UDP">UDP</string>
    <string name="ICMP">ICMP</string>
    <string name="Options">Options</string>
    <string name="Count">Count</string>
    <string name="TCPOptions">TCP Options</string>
    <string name="Syn">SYN</string>
    <string name="Fin">FIN</string>
    <string name="RST">RST</string>
    <string name="Push">PUSH</string>
    <string name="Ack">ACK</string>
    <string name="Urg">URG</string>
    <string name="Xmas">Xmas</string>
    <string name="Ymas">Ymas</string>
    <string name="Timestamp">Timestamp</string>
    <string name="Badcksum">Bad Checksum</string>
    <string name="Sequence">Sequence Num</string>
    <string name="TCPWindowSize">TCP Window Size</string>
    <string name="TCPSequence">TCP Sequence Number</string>
    <string name="TCPOffset">Fake TCP data offset</string>
    <string name="RandSource">Random Source</string>
    <string name="RandDest">Random Destination</string>
    <string name="TTL">TTL</string>
    <string name="Spoof">Spoof hostname</string>
    <string name="Frag">Frag</string>
    <string name="DontFrag">Don\'t Frag</string>
    <string name="MoreFrag">More Frag</string>
    <string name="RecordRoute">Record Route</string>
    <string name="FragmentOffset">Fragment Offset</string>
    <string name="MTU">MTU Value</string>
    <string name="Interval">Interval</string>
</resources>
